--- a/src/main/resources/dao.properties
+++ b/src/main/resources/dao.properties
@@ -1,4 +1,4 @@
-url = jdbc:mysql://localhost:3306/computer-database-db
+url = jdbc:mysql://localhost:3306/computer-database-db?autoReconnect=true&useSSL=false
 driver = com.mysql.jdbc.Driver
 nomutilisateur = root
-motdepasse = arthome@
+motdepasse = root
