--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -26,6 +26,10 @@
         <servlet-name>ComputerAdd</servlet-name>
         <servlet-class>controllers.ComputerAdd</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ComputerDelete</servlet-name>
+        <servlet-class>controllers.ComputerDelete</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>ComputerAdd</servlet-name>
         <url-pattern>/add</url-pattern>
