--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,10 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
 
+    <welcome-file-list>
+        <welcome-file>dashboard</welcome-file>
+    </welcome-file-list>
+
     <servlet>
         <servlet-name>Dashboard</servlet-name>
         <servlet-class>controllers.webservices.Dashboard</servlet-class>
@@ -38,5 +42,21 @@
         <servlet-name>ComputerDelete</servlet-name>
         <url-pattern>/delete</url-pattern>
     </servlet-mapping>
+
+    <error-page>
+        <error-code>403</error-code>
+        <location>/views/403.jsp</location>
+    </error-page>
+
+    <error-page>
+        <error-code>404</error-code>
+        <location>/views/404.jsp</location>
+    </error-page>
+
+    <!--error-page>
+        <error-code>500</error-code>
+        <location>/WEB-INF/views/500.html</location>
+    </error-page!-->
+
 
 </web-app>
