--- a/gatling-test/src/test/resources/application.conf
+++ b/gatling-test/src/test/resources/application.conf
@@ -3,15 +3,15 @@
 ####################################
 
 application {
-  baseUrl = "http://localhost:8081/computerDB/"
+  baseUrl = "http://localhost:8080/"
   nbUsers = 1000
   nbAdmins = 10
   urls {
-    addPage = "computer/add"
-    addPost = "computer/add"
-    dashboardPage = "computer"
-    deletePost = "computer"
-    editPost = "computer/edit"
+    addPage = "add"
+    addPost = "add"
+    dashboardPage = "dashboard"
+    deletePost = "dashboard"
+    editPost = "edit"
     loginPage = "login"
     loginPost = "j_spring_security_check"
     idElement {
@@ -30,11 +30,11 @@ application {
       }
     }
     param {
-      order = "sort"
-      page = "page"
-      pageSize = "pageSize"
+      order = "order"
+      page = "currentPage"
+      pageSize = "limit"
       search = "search"
-      column = "column"
+      column = "order"
     }
     form {
       add {
@@ -70,15 +70,15 @@ application {
         main = "css/main.css"
       }
       font {
-        frFlag = "fonts/fr.png"
-        ukFlag = "fonts/uk.png"
+        # frFlag = "fonts/fr.png"
+        # ukFlag = "fonts/uk.png"
       }
       js {
-        add = "js/addComputer.js"
+        # add = "js/addComputer.js"
         bootstrap = "js/bootstrap.min.js"
         jquery = "js/jquery.min.js"
         jqueryValidate = "js/jquery.validate.min.js"
-        login = "js/login.js"
+        # login = "js/login.js"
       }
     }
   }
