--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,7 @@ buildNumber.properties
 !/.mvn/wrapper/maven-wrapper.jar
 
 # End of https://www.gitignore.io/api/intellij,java,maven
+
+#Docker file
+Dockerfile.web
+Dockerfile.db
