--- a/src/main/resources/hikari.properties
+++ b/src/main/resources/hikari.properties
@@ -1,4 +1,4 @@
-dataSourceClassName=com.mysql.cj.jdbc.MysqlDataSource
-dataSource.url=jdbc:mysql://localhost:3306/computer-database-db?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+dataSourceClassName=${db.driver}
+dataSource.url=${db.url}?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 dataSource.user=root
 dataSource.password=root
