--- a/pom.xml
+++ b/pom.xml
@@ -84,10 +84,19 @@
             </properties>
         </profile>
         <profile>
-            <id>dev</id>
+            <id>local</id>
             <activation>
                 <activeByDefault>true</activeByDefault>
             </activation>
+            <properties>
+                <db.url>jdbc:mysql://localhost:3306/computer-database-db</db.url>
+                <db.driver>com.mysql.cj.jdbc.MysqlDataSource</db.driver>
+                <db.username>root</db.username>
+                <db.password>root</db.password>
+            </properties>
+        </profile>
+        <profile>
+            <id>dev</id>
             <properties>
                 <db.url>jdbc:mysql://172.17.0.1:3306/computer-database-db</db.url>
                 <db.driver>com.mysql.cj.jdbc.MysqlDataSource</db.driver>
