[Spring] Working bean datasource, tests

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <jstl.version>1.2</jstl.version>
         <selelium.version>3.3.1</selelium.version>
         <guava.version>21.0</guava.version>
+        <org.springframework.version>4.3.7.RELEASE</org.springframework.version>
     </properties>
 
     <build>
@@ -77,7 +78,7 @@
         <profile>
             <id>test</id>
             <properties>
-                <db.url>jdbc:mysql://172.17.0.1:3307/computer-database-db</db.url>
+                <db.url>jdbc:mysql://mysql-test:3307/computer-database-db</db.url>
                 <db.driver>com.mysql.cj.jdbc.MysqlDataSource</db.driver>
                 <db.username>root</db.username>
                 <db.password>root</db.password>
@@ -98,7 +99,7 @@
         <profile>
             <id>dev</id>
             <properties>
-                <db.url>jdbc:mysql://172.17.0.1:3306/computer-database-db</db.url>
+                <db.url>jdbc:mysql://mysql-prod:3306/computer-database-db</db.url>
                 <db.driver>com.mysql.cj.jdbc.MysqlDataSource</db.driver>
                 <db.username>root</db.username>
                 <db.password>root</db.password>
@@ -127,6 +128,13 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>${logback-classic.version}</version>
+            <scope>runtime</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.slf4j/jcl-over-slf4j -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+            <version>${slf4j.version}</version>
             <scope>runtime</scope>
         </dependency>
         <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
@@ -196,6 +204,64 @@
             <artifactId>guava</artifactId>
             <version>${guava.version}</version>
             <scope>test</scope>
+        </dependency>
+        <!-- Core utilities used by other modules.
+    Define this if you use Spring Utility APIs
+    (org.springframework.core.*/org.springframework.util.*)-->
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>${org.springframework.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>commons-logging</groupId>
+                    <artifactId>commons-logging</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <!-- Bean Factory and JavaBeans utilities (depends on spring-core)
+            Define this if you use Spring Bean APIs
+            (org.springframework.beans.*)-->
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-beans -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
+            <version>${org.springframework.version}</version>
+        </dependency>
+        <!-- The spring-webmvc module (also known as the Web-Servlet module) contains
+			Spring’s model-view-controller (MVC) and REST Web Services implementation
+			for web applications -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${org.springframework.version}</version>
+        </dependency>
+        <!-- The spring-web module provides basic web-oriented integration features
+            such as multipart file upload functionality and the initialization of the
+            IoC container using Servlet listeners and a web-oriented application context -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>${org.springframework.version}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-jdbc -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>${org.springframework.version}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${org.springframework.version}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-test -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${org.springframework.version}</version>
         </dependency>
 
     </dependencies>
