--- a/src/main/resources/hikari.properties
+++ b/src/main/resources/hikari.properties
@@ -2,3 +2,4 @@ dataSourceClassName=${db.driver}
 dataSource.url=${db.url}?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 dataSource.user=root
 dataSource.password=root
+maximumPoolSize=20
