--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -20,30 +20,16 @@
     </welcome-file-list>
 
     <servlet>
-        <servlet-name>Dashboard</servlet-name>
-        <servlet-class>controllers.webservices.Dashboard</servlet-class>
+        <servlet-name>dispatcher</servlet-name>
+        <servlet-class>
+            org.springframework.web.servlet.DispatcherServlet
+        </servlet-class>
+        <load-on-startup>1</load-on-startup>
     </servlet>
-    <servlet-mapping>
-        <servlet-name>Dashboard</servlet-name>
-        <url-pattern>/dashboard</url-pattern>
-    </servlet-mapping>
 
-    <servlet>
-        <servlet-name>ComputerEdit</servlet-name>
-        <servlet-class>controllers.webservices.ComputerEdit</servlet-class>
-    </servlet>
     <servlet-mapping>
-        <servlet-name>ComputerEdit</servlet-name>
-        <url-pattern>/edit</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>ComputerAdd</servlet-name>
-        <servlet-class>controllers.webservices.ComputerAdd</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>ComputerAdd</servlet-name>
-        <url-pattern>/add</url-pattern>
+        <servlet-name>dispatcher</servlet-name>
+        <url-pattern>/</url-pattern>
     </servlet-mapping>
 
     <error-page>
